--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,37 +5,37 @@ body {
 li {
   list-style: none;
 }
-.header {
+header {
   background-color: #cc99ff;
   color: #ffffff;
-  height: 90px;
+  height: 80px;
 }
-.header-logo {
+header-logo {
   float: left;
-  font-size: 30px;
+  font-size: 15px;
   padding: 20px 30px;
 }
 
-.header-list li {
+header-list li {
   float: right;
   padding: 30px 20px;
 }
 
-.main {
+main {
   padding: 80px 100px;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-.copy-container h1 {
-  font-size: 30px;
+copy-container h1 {
+  font-size: 35px;
 }
 
-.copy-container h2 {
-  font-size: 30px;
+copy-container h2 {
+  font-size: 35px;
 }
-.contents-item p {
-  font-size: 15px;
+contents-item p {
+  font-size: 30px;
   margin-top: 25px;
   padding top: 50px;
   padding-bottom: 100px;
@@ -43,7 +43,7 @@ li {
 .footer {
   background-color: #cc99ff;
   color: #fff;
-  height: 40px;
+  height: 100px;
   padding-top: 20px;
 }
 
