--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+<style>
 body {
   font-family: "Monaco";
 }
@@ -52,3 +53,4 @@ contents-item p {
   padding: 10px 5px;
   padding-bottom: 20px;
 }
+</style>
