--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,15 @@
 <style>
 body {
   font-family: "Monaco";
+  font-size: 30px;
 }
 
 li {
   list-style: none;
+  float: right;
+  padding: 30px 20px;
 }
+
 header {
   background-color: #cc99ff;
   color: #ffffff;
@@ -17,40 +21,23 @@ header-logo {
   padding: 20px 30px;
 }
 
-header-list li {
-  float: right;
-  padding: 30px 20px;
-}
-
 main {
   padding: 80px 100px;
   padding-top: 100px;
   padding-bottom: 100px;
 }
 
-copy-container h1 {
-  font-size: 35px;
-}
-
-copy-container h2 {
-  font-size: 35px;
-}
-contents-item p {
+p {
   font-size: 30px;
   margin-top: 25px;
   padding top: 50px;
   padding-bottom: 100px;
 }
+
 .footer {
   background-color: #cc99ff;
   color: #fff;
   height: 100px;
   padding-top: 20px;
-}
-
-.footer-list li {
-  float: right;
-  padding: 10px 5px;
-  padding-bottom: 20px;
 }
 </style>
