--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ body {
 li {
   list-style: none;
   float: right;
-  padding: 30px 30px;
+  padding: 20px 10px;
 }
 
 .header {
@@ -20,6 +20,7 @@ li {
 .header-logo {
   float: left;
   font-size: 20px;
+  padding-right: 10px;
   padding-top: 20px;
 }
 
